;; Protobuf code generation for MASC coordination protocol.
;; Uses ocaml-protoc-plugin to generate OCaml types with binary serialization.

(library
 (name masc_proto)
 (public_name masc_mcp.proto)
 (libraries ocaml-protoc-plugin))

(rule
 (targets masc_coordination.ml)
 (deps masc_coordination.proto)
 (action
  (run protoc --ocaml_out=int64_as_int=false:. -I . masc_coordination.proto)))
