;; Protobuf code generation for MASC workspace protocol.
;; Uses ocaml-protoc-plugin to generate OCaml types with binary serialization.

(library
 (name masc_proto)
 (public_name masc.proto)
 (libraries ocaml-protoc-plugin))

(rule
 (targets masc_workspace.ml)
 (deps masc_workspace.proto)
 (action
  (run protoc --ocaml_out=int64_as_int=false:. -I . masc_workspace.proto)))
