; ============================================================
; Test Environment Configuration
; Force filesystem backend to avoid external DB connection timeouts
; ============================================================
(env
 (_
  (env-vars
   (MASC_STORAGE_TYPE filesystem)
   ; Unset all PostgreSQL URL env vars to prevent auto-detect PG backend.
   ; postgres_url_from_env() checks these 4 in cascade order.
   (MASC_POSTGRES_URL "")
   (DATABASE_URL "")
   (SUPABASE_DB_URL "")
   (SB_PG_URL "")
   ; Ignore shell-level workspace overrides so tests stay isolated in temp dirs.
   ; Prevent inherited shell MASC_BASE_PATH from binding tests to real
   ; workspace state. Tests that need a base path pass it explicitly.
   (MASC_BASE_PATH "")
   ; Avoid non-deterministic external network calls during unit tests.
   (GRAPHQL_API_KEY "")
   (ZAI_API_KEY ""))))

; ============================================================
; All standard tests share the masc_test_deps wrapper library
; (see test/deps/dune for the full dependency list).
;
; Tests below are grouped by compilation model:
;   (tests ...) = multiple binaries, shared library list
;   (test ...)  = single binary, special config needed
; ============================================================

; ============================================================
; Group 1: Pure synchronous tests
; ============================================================
(tests
 (names test_room test_room_state_recovery test_types test_auth test_audit_log test_http_negotiation
        test_sse test_cancellation test_graphql_api
        test_graphql_endpoint
        test_subscriptions test_session test_progress test_spawn
        test_validation test_response
        test_channel_gate_connector_routes
        test_dashboard
        test_dashboard_perf
        test_dashboard_tool_host_events
        test_gate_keeper_backend
        test_transport_read_model
        test_multi_room test_worktree_detection test_bounded test_mention
        test_heartbeat_qw test_sse_qw test_sse_stream test_agent_health
        test_post_verifier
        test_swarm_checkpoint test_swarm_goal_loop
        test_keeper_memory
        test_keeper_exec_status
        test_keeper_adaptive_thinking
        test_keeper_lifecycle
        test_keeper_lifecycle_chaos
        test_keeper_deliberation
        test_keeper_registry
        test_keeper_supervisor
        test_keeper_allowed_paths
        test_keeper_llama_only
        test_keeper_meta_cwd_resilience
        test_metrics_rotation
        test_tool_access_policy
        test_tool_access_role
        test_tool_token
        test_tool_exposure
        test_autonomy_liberation
        test_keeper_unified
        test_keeper_telemetry_feedback
        test_keeper_toml
        test_keeper_tool_policy_config
        test_keeper_toml_config_validation
        test_keeper_bash_safety
        test_hitl_approval
        test_keeper_discovered_tools
        test_keeper_tool_affinity
        test_keeper_github_safety
        test_worktree_live_context
        test_tool_input_validation
        test_autoresearch_codegen
        test_autoresearch_oas_primitives
        ; test_contract_risk removed (team session cleanup)
        ; test_contract_composer removed (team session cleanup)
        test_cdal_conformance
        test_task_stage
        ; test_risk_digest removed (team session cleanup)
        test_artifact_store
        test_golden_set
        test_golden_set_eval
        test_adversarial_eval
        test_labeling
        test_tool_deep_review
        test_typed_state
        test_keeper_prompt_metrics
        test_cache_metrics_wiring
        test_tool_surface_ssot
        test_keeper_retrieval_quality
        test_observability_redact
        test_observability_provider_contracts
        test_worker_oas_scope_gate
        test_run_local_script
        test_tool_prefilter
        test_keeper_state_machine
        test_telemetry_unified
        test_keeper_topk_llm
        test_warn_root_causes)
 (modules test_room test_room_state_recovery test_types test_auth test_audit_log test_http_negotiation
          test_sse test_cancellation test_graphql_api
          test_graphql_endpoint
          test_subscriptions test_session test_progress test_spawn
          test_validation test_response
          test_channel_gate_connector_routes
          test_dashboard
          test_dashboard_perf
          test_dashboard_tool_host_events
          test_gate_keeper_backend
          test_transport_read_model
          test_multi_room test_worktree_detection test_bounded test_mention
          test_heartbeat_qw test_sse_qw test_sse_stream test_agent_health
          test_post_verifier
          test_swarm_checkpoint test_swarm_goal_loop
          test_keeper_memory
          test_keeper_exec_status
        test_keeper_adaptive_thinking
          test_keeper_lifecycle
          test_keeper_lifecycle_chaos
          test_keeper_deliberation
          test_keeper_registry
          test_keeper_supervisor
          test_keeper_allowed_paths
          test_keeper_llama_only
          test_keeper_meta_cwd_resilience
          test_metrics_rotation
          test_tool_access_policy
          test_tool_access_role
          test_tool_token
          test_tool_exposure
          test_autonomy_liberation
          test_keeper_unified
          test_keeper_telemetry_feedback
          test_keeper_toml
          test_keeper_tool_policy_config
          test_keeper_toml_config_validation
          test_keeper_bash_safety
          test_hitl_approval
          test_keeper_discovered_tools
          test_keeper_tool_affinity
          test_keeper_github_safety
          test_worktree_live_context
          test_tool_input_validation
          test_autoresearch_codegen
          test_autoresearch_oas_primitives
          ; test_contract_risk removed (team session cleanup)
          ; test_contract_composer removed (team session cleanup)
          test_cdal_conformance
          test_task_stage
          ; test_risk_digest removed (team session cleanup)
          test_artifact_store
          test_golden_set
          test_golden_set_eval
          test_adversarial_eval
          test_labeling
          test_tool_deep_review
          test_typed_state
          test_keeper_prompt_metrics
          test_cache_metrics_wiring
          test_tool_surface_ssot
          test_keeper_retrieval_quality
          test_observability_redact
          test_observability_provider_contracts
          test_worker_oas_scope_gate
          test_run_local_script
          test_tool_prefilter
          test_keeper_state_machine
          test_telemetry_unified
          test_keeper_topk_llm
          test_warn_root_causes)
 (libraries masc_test_deps))

; ============================================================
; Group 2: Property-based tests (QCheck)
; ============================================================
(tests
 (names test_pbt_mention test_pbt_validation test_pbt_text_processing test_pbt_context_overflow
        test_keeper_state_machine_pbt test_keeper_trace_validate)
 (modules test_pbt_mention test_pbt_validation test_pbt_text_processing test_pbt_context_overflow
          test_keeper_state_machine_pbt test_keeper_trace_validate)
 (libraries masc_test_deps))

; ============================================================
; Focused single-module tests
; ============================================================
(test
 (name test_meta_cognition_snapshot)
 (modules test_meta_cognition_snapshot)
 (libraries masc_test_deps))

(test
 (name test_meta_cognition_feedback)
 (modules test_meta_cognition_feedback)
 (libraries masc_test_deps))

; test_worker_run_evidence_summary removed (team session cleanup)

; test_team_session_worker_run_meta_repair removed (team session cleanup)

; ============================================================
; Group 3: Eio-native tests (single-module, standard deps)
; Merged from ~100 individual (test ...) stanzas.
; ============================================================
(tests
 (names
        test_runtime_params
        test_config_dir_resolver
        test_room_coverage
        test_streamable_http
        test_dashboard_mission
        test_dashboard_mission_briefing
        test_command_plane_help
        ; test_dashboard_proof removed (team session cleanup)

        test_dashboard_cache
        test_dashboard_execution
        test_dashboard_http_core
        test_dashboard_autoresearch
        test_dashboard_harness_health
        test_dashboard_repo_synthesis
        test_dashboard_tools
        test_tool_quality_classify
        test_tui_decode
        test_dashboard_governance
        test_dashboard_labels
        test_dashboard_surface_readiness
        test_activity_graph
        test_masc_log
        test_dashboard_namespace_truth
        test_server_runtime_bootstrap
        test_server_base_path_diagnostics
        test_server_startup_takeover
        test_worker_runtime
        test_capability_registry
        test_tool_local_runtime_verify
        test_tool_local_runtime_probe
        test_board_ttl
        test_worker_dev_tools
        test_oas_integration
        test_memory_oas_5tier
        test_verifier_oas_bridge
        test_oas_adapters
        ; test_team_session_oas_bridge removed (team session cleanup)
        ; test_team_session_swarm_runner removed (team session cleanup)
        test_cache_eio
        test_metrics_store_eio
        test_hebbian_eio
        test_planning_eio
        test_thompson_sampling
        test_safe_ops
        test_json_util
        test_swarm_status
        test_process_eio_coverage
        test_provider_adapter
        test_worker_container_coverage
        test_resilience
        test_common
        test_room_messages_raw
        test_room_messages_pg
        test_cp_cleanup
        test_cp_search_fabric
        test_cp_section_cache
        test_cp_jsonl_tail
        ; test_swarm_persistence removed (team session cleanup)
        test_tool_repo_synthesis
        test_local_runtime_pool
        test_keeper_tools_oas
        test_keeper_tool_exposure
        test_keeper_runtime_denylist
        test_keeper_runtime_config_ssot
        test_keeper_voice_loop
        test_keeper_task_dispatch
        test_keeper_tag_dispatch
        test_autoresearch_knowledge
        test_mcp_server_eio
        test_mcp_server_eio_call_tool
        test_code_navigation_eio
        test_backend
        test_room_eio
        test_http_server_eio
        test_compression
        test_pubsub_postgres
        test_fs_compat
        test_concurrency_stress
        test_eio_mutex_concurrency
        test_a2a_e2e
        test_board_dispatch
        test_room_vote
        test_task_dispatch
        test_drift_guard_core
        test_verify_handoff_tool
        test_tool_contract_truth
        test_file_lock_eio
        test_error_logging_coverage
        test_agent_identity
        test_mcp_full_cycle
        test_agent_registry_eio
        test_identity_e2e
        test_identity_edge_cases
        test_verification
        test_lamport
        test_pulse
        test_transport_metrics
        test_adaptive_cache_ttl
        test_tool_compact
        test_trajectory
        test_eval_gate
        test_eval_harness
        test_tool_board_coverage
        ; test_proof_criteria removed (team session cleanup)
        test_tool_registration_consistency
        test_tree_index
        test_tool_registry
        test_tool_dispatch
        test_tool_spec
        test_tool_result
        test_tool_hooks
        test_governance_pipeline
        test_keeper_agent_isolation
        test_sse_external_sub
        test_ws_transport
        test_webrtc_signaling
        test_transport_integration
        test_tool_metrics
        test_tool_metrics_persist
        test_keeper_tool_call_log
        test_tool_unified
        test_build_identity
        test_workflow_guide
        test_agent_economy
        test_lifecycle
        test_auto_recall_activity_coverage
        test_grpc_coordination
        test_grpc_client
        test_http_protocol_detect
        test_keeper_safety_gates
        test_eval_gate_evasion
        test_prompt_registry_defaults
        test_keeper_recurring
        test_cdal_types
        test_cdal_loader
        test_cdal_judge
        test_cdal_eval_v1
        test_cdal_friction_projection
        test_task_sandbox
        test_governance_yojson_roundtrip
        test_eval_calibration
        test_goal_janitor
        test_keeper_pr_workflow)
 (modules
        test_runtime_params
        test_config_dir_resolver
        test_room_coverage
        test_streamable_http
        test_dashboard_mission
        test_dashboard_mission_briefing
        test_command_plane_help
        ; test_dashboard_proof removed (team session cleanup)

        test_dashboard_cache
        test_dashboard_execution
        test_dashboard_http_core
        test_dashboard_autoresearch
        test_dashboard_harness_health
        test_dashboard_repo_synthesis
        test_dashboard_tools
        test_tool_quality_classify
        test_tui_decode
        test_dashboard_governance
        test_dashboard_labels
        test_dashboard_surface_readiness
        test_activity_graph
        test_masc_log
        test_dashboard_namespace_truth
        test_server_runtime_bootstrap
        test_server_base_path_diagnostics
        test_server_startup_takeover
        test_worker_runtime
        test_capability_registry
        test_tool_local_runtime_verify
        test_tool_local_runtime_probe
        test_board_ttl
        test_worker_dev_tools
        test_oas_integration
        test_memory_oas_5tier
        test_verifier_oas_bridge
        test_oas_adapters
        ; test_team_session_oas_bridge removed (team session cleanup)
        ; test_team_session_swarm_runner removed (team session cleanup)
        test_cache_eio
        test_metrics_store_eio
        test_hebbian_eio
        test_planning_eio
        test_thompson_sampling
        test_safe_ops
        test_json_util
        test_swarm_status
        test_process_eio_coverage
        test_provider_adapter
        test_worker_container_coverage
        test_resilience
        test_common
        test_room_messages_raw
        test_room_messages_pg
        test_cp_cleanup
        test_cp_search_fabric
        test_cp_section_cache
        test_cp_jsonl_tail
        ; test_swarm_persistence removed (team session cleanup)
        test_tool_repo_synthesis
        test_local_runtime_pool
        test_keeper_tools_oas
        test_keeper_tool_exposure
        test_keeper_runtime_denylist
        test_keeper_runtime_config_ssot
        test_keeper_voice_loop
        test_keeper_task_dispatch
        test_keeper_tag_dispatch
        test_autoresearch_knowledge
        test_mcp_server_eio
        test_mcp_server_eio_call_tool
        test_code_navigation_eio
        test_backend
        test_room_eio
        test_http_server_eio
        test_compression
        test_pubsub_postgres
        test_fs_compat
        test_concurrency_stress
        test_eio_mutex_concurrency
        test_a2a_e2e
        test_board_dispatch
        test_room_vote
        test_task_dispatch
        test_drift_guard_core
        test_verify_handoff_tool
        test_tool_contract_truth
        test_file_lock_eio
        test_error_logging_coverage
        test_agent_identity
        test_mcp_full_cycle
        test_agent_registry_eio
        test_identity_e2e
        test_identity_edge_cases
        test_verification
        test_lamport
        test_pulse
        test_transport_metrics
        test_adaptive_cache_ttl
        test_tool_compact
        test_trajectory
        test_eval_gate
        test_eval_harness
        test_tool_board_coverage
        ; test_proof_criteria removed (team session cleanup)
        test_tool_registration_consistency
        test_tree_index
        test_tool_registry
        test_tool_dispatch
        test_tool_spec
        test_tool_result
        test_tool_hooks
        test_governance_pipeline
        test_keeper_agent_isolation
        test_sse_external_sub
        test_ws_transport
        test_webrtc_signaling
        test_transport_integration
        test_tool_metrics
        test_tool_metrics_persist
        test_tool_unified
        test_keeper_tool_call_log
        test_build_identity
        test_workflow_guide
        test_agent_economy
        test_lifecycle
        test_auto_recall_activity_coverage
        test_grpc_coordination
        test_grpc_client
        test_http_protocol_detect
        test_keeper_safety_gates
        test_eval_gate_evasion
        test_prompt_registry_defaults
        test_keeper_recurring
        test_cdal_types
        test_cdal_loader
        test_cdal_judge
        test_cdal_eval_v1
        test_cdal_friction_projection
        test_task_sandbox
        test_governance_yojson_roundtrip
        test_eval_calibration
        test_goal_janitor
        test_keeper_pr_workflow)
 (libraries masc_test_deps))

; Tool diversity: Shannon entropy + QCheck PBT
(test
 (name test_tool_diversity)
 (modules test_tool_diversity)
 (libraries masc_test_deps))

; ============================================================
; Group 4: Coverage tests (generated by Agent Autonomy)
; ============================================================
(tests
 (names test_admission_queue_coverage
        test_backend_coverage test_tools_coverage test_types_utils_coverage
        test_agent_card_coverage test_misc_coverage test_relay_coverage
        test_tempo_coverage test_transport_coverage test_validation_coverage
        test_dashboard_resilience_coverage
        test_nickname_coverage test_level2_config_coverage
        test_compression_dict_coverage test_config_coverage
        test_env_config_coverage test_progress_coverage
        test_mcp_protocol_coverage test_notify_coverage
        test_mcp_session_coverage test_sse_coverage
        test_credits_dashboard_coverage test_room_utils_coverage
        test_orchestrator_coverage test_cancellation_coverage
        test_web_dashboard_coverage test_auth_coverage
        test_a2a_tools_coverage test_graphql_api_coverage
        test_mention_coverage test_resilience_coverage
        test_level4_config_coverage test_error_coverage
        test_types_coverage test_spawn_coverage test_dashboard_coverage
        test_rate_limit_coverage test_bounded_coverage test_session_coverage
        test_cache_eio_coverage test_run_eio_coverage
        test_handover_eio_coverage test_mcp_server_eio_coverage
        test_http_server_eio_coverage test_telemetry_eio_coverage
        test_room_git_coverage test_prometheus_coverage
        test_auto_responder_coverage test_tool_plan_coverage
        test_tool_worktree_coverage
        test_tool_handover_coverage
        test_tool_relay_coverage test_tool_heartbeat_coverage
        test_tool_auth_coverage test_tool_agent_coverage
        test_tool_task_coverage test_tool_room_coverage
        test_tool_control_coverage test_tool_misc_coverage
        test_ag_ui_coverage test_tool_verification_coverage
        test_tool_suspend_coverage test_tool_code_coverage
        test_tool_code_write_coverage
        test_tool_library_coverage test_tool_shard_coverage
        test_context_compact_oas_coverage test_keeper_masc_bridge
        test_anti_rationalization_coverage test_field_validation)
 (modules test_admission_queue_coverage
        test_backend_coverage test_tools_coverage test_types_utils_coverage
        test_agent_card_coverage test_misc_coverage test_relay_coverage
        test_tempo_coverage test_transport_coverage test_validation_coverage
        test_dashboard_resilience_coverage
        test_nickname_coverage test_level2_config_coverage
        test_compression_dict_coverage test_config_coverage
        test_env_config_coverage test_progress_coverage
        test_mcp_protocol_coverage test_notify_coverage
        test_mcp_session_coverage test_sse_coverage
        test_credits_dashboard_coverage test_room_utils_coverage
        test_orchestrator_coverage test_cancellation_coverage
        test_web_dashboard_coverage test_auth_coverage
        test_a2a_tools_coverage test_graphql_api_coverage
        test_mention_coverage test_resilience_coverage
        test_level4_config_coverage test_error_coverage
        test_types_coverage test_spawn_coverage test_dashboard_coverage
        test_rate_limit_coverage test_bounded_coverage test_session_coverage
        test_cache_eio_coverage test_run_eio_coverage
        test_handover_eio_coverage test_mcp_server_eio_coverage
        test_http_server_eio_coverage test_telemetry_eio_coverage
        test_room_git_coverage test_prometheus_coverage
        test_auto_responder_coverage test_tool_plan_coverage
        test_tool_worktree_coverage
        test_tool_handover_coverage
        test_tool_relay_coverage test_tool_heartbeat_coverage
        test_tool_auth_coverage test_tool_agent_coverage
        test_tool_task_coverage test_tool_room_coverage
        test_tool_control_coverage test_tool_misc_coverage
        test_ag_ui_coverage test_tool_verification_coverage
        test_tool_suspend_coverage test_tool_code_coverage
        test_tool_code_write_coverage
        test_tool_library_coverage test_tool_shard_coverage
        test_context_compact_oas_coverage test_keeper_masc_bridge
        test_anti_rationalization_coverage test_field_validation)
 (libraries masc_test_deps))

; ============================================================
; Special: Multi-module test suites
; ============================================================

; Command Plane v2 (8 modules)
(test
 (name test_command_plane_v2)
 (modules test_command_plane_v2
          test_command_plane_v2_support
          test_command_plane_v2_policy_inputs
          test_command_plane_v2_traces
          test_command_plane_v2_summary
          test_command_plane_v2_scheduler_core_a
          test_command_plane_v2_scheduler_core_b
          test_command_plane_v2_scheduler_policy
          test_command_plane_v2_search)
 (libraries masc_test_deps))

; Operator Control (7 modules)
(test
 (name test_operator_control)
 (modules test_operator_control
          test_operator_control_support
          test_operator_control_snapshot
          test_operator_control_actions
          test_operator_control_judgment
          test_operator_control_swarm
          test_operator_control_keeper)
 (libraries masc_test_deps))

; Normalized actor (operator_pending_confirm)
(test
 (name test_normalized_actor)
 (modules test_normalized_actor)
 (libraries masc_test_deps))

; Failover leader deterministic selection
(test
 (name test_failover_leader)
 (modules test_failover_leader)
 (libraries masc_test_deps))

; MCP Tool Matrix (2 modules + generated names + runner dep)
(test
 (name test_mcp_tool_matrix)
 (modules test_mcp_tool_matrix test_mcp_tool_matrix_cases)
 (deps tool_matrix_case_runner.exe)
 (libraries masc_test_deps))

; Keeper Tool Matrix (3 modules + runner dep)
(test
 (name test_keeper_tool_matrix)
 (modules test_keeper_tool_matrix test_keeper_tool_matrix_cases
          test_mcp_tool_matrix_cases)
 (deps keeper_tool_matrix_case_runner.exe)
 (libraries masc_test_deps))

; ============================================================
; Special: Custom compiler flags
; ============================================================

; OAS Worker (suppresses warning 32)
(test
 (name test_oas_worker)
 (modules test_oas_worker)
 (ocamlopt_flags (:standard -w -32))
 (libraries masc_test_deps))

; ============================================================
; Special: E2E tests requiring server binary
; These tests start/connect to an actual MASC MCP server process.
; Skip by default; run with: MASC_E2E_TESTS=true dune test
; ============================================================

(test
 (name test_mcp_post_sse_e2e)
 (modules test_mcp_post_sse_e2e)
 (libraries alcotest yojson unix)
 (deps ../bin/main_eio.exe)
 (enabled_if (= %{env:MASC_E2E_TESTS=false} "true")))

(test
 (name test_sse_storm_e2e)
 (modules test_sse_storm_e2e)
 (libraries alcotest yojson unix)
 (deps ../bin/main_eio.exe)
 (enabled_if (= %{env:MASC_E2E_TESTS=false} "true")))

(test
 (name test_board_api_e2e)
 (modules test_board_api_e2e)
 (libraries alcotest unix)
 (deps ../bin/main_eio.exe)
 (enabled_if (= %{env:MASC_E2E_TESTS=false} "true")))

(test
 (name test_openapi_api_e2e)
 (modules test_openapi_api_e2e)
 (libraries alcotest yojson unix)
 (deps ../bin/main_eio.exe)
 (enabled_if (= %{env:MASC_E2E_TESTS=false} "true")))

(test
 (name test_operator_mcp_e2e)
 (modules test_operator_mcp_e2e)
 (libraries masc_test_deps)
 (deps ../bin/main_eio.exe)
 (enabled_if (= %{env:MASC_E2E_TESTS=false} "true")))

(test
 (name test_dashboard_keeper_routes)
 (modules test_dashboard_keeper_routes)
 (libraries masc_test_deps)
 (deps ../bin/main_eio.exe)
 (enabled_if (= %{env:MASC_E2E_TESTS=false} "true")))

(test
 (name test_compression_boundary)
 (modules test_compression_boundary)
 (libraries alcotest masc_backend masc_compression))

; ============================================================
; Special: Minimal dependency tests (CI scripts, governance)
; ============================================================

(test
 (name test_ci_hardening_source)
 (modules test_ci_hardening_source)
 (libraries alcotest unix str))

(test
 (name test_channel_gate)
 (modules test_channel_gate)
 (libraries masc_test_deps))

(test
 (name test_channel_gate_metrics)
 (modules test_channel_gate_metrics)
 (libraries masc_test_deps))

(test
 (name test_channel_gate_discord_state)
 (modules test_channel_gate_discord_state)
 (libraries masc_test_deps))

(test
 (name test_gate_protocol)
 (modules test_gate_protocol)
 (libraries masc_test_deps))

(test
 (name test_local_review_script)
 (modules test_local_review_script)
 (libraries alcotest unix yojson))

(test
 (name test_ci_run_tests_script)
 (modules test_ci_run_tests_script)
 (libraries alcotest unix))

(test
 (name test_pr_open_script)
 (modules test_pr_open_script)
 (libraries alcotest unix))

(test
 (name test_release_train_guard_script)
 (modules test_release_train_guard_script)
 (libraries alcotest unix))

(test
 (name test_start_masc_mcp_script)
 (modules test_start_masc_mcp_script)
 (libraries alcotest unix))

(test
 (name test_harness_shell_helpers)
 (modules test_harness_shell_helpers)
 (libraries alcotest unix))


(test
 (name test_dated_jsonl)
 (modules test_dated_jsonl)
 (libraries dated_jsonl fs_compat alcotest eio eio_main yojson unix))

; ============================================================
; Special: Heartbeat/keeper minimal deps
; ============================================================

(test
 (name test_work_as_heartbeat)
 (modules test_work_as_heartbeat)
 (libraries masc_mcp masc_mcp.config alcotest unix))

(test
 (name test_phase2_self_preservation)
 (modules test_phase2_self_preservation)
 (libraries masc_mcp masc_mcp.config alcotest eio eio_main unix fs_compat))

(test
 (name test_heartbeat_integration)
 (modules test_heartbeat_integration)
 (libraries masc_mcp masc_mcp.config fs_compat alcotest eio eio_main unix))

(test
 (name test_smart_heartbeat_keepalive)
 (modules test_smart_heartbeat_keepalive)
 (libraries masc_mcp masc_mcp.config masc_room masc_types alcotest unix))

(test
 (name test_keeper_fs)
 (modules test_keeper_fs)
 (libraries masc_mcp alcotest yojson unix eio eio_main))

; ============================================================
; Special: Board PG (requires caqti-driver-postgresql)
; ============================================================

(test
 (name test_board_pg)
 (modules test_board_pg)
 (libraries masc_test_deps caqti caqti-eio.unix caqti-driver-postgresql))

(test
 (name test_board_pg_notify)
 (modules test_board_pg_notify)
 (libraries masc_test_deps))

; ============================================================
; Executables (benchmarks, distributed tests, tools)
; ============================================================

(executable
 (name test_cp_search_fabric_benchmark)
 (modules test_cp_search_fabric_benchmark)
 (libraries masc_test_deps))

(executable
 (name test_repo_synthesis_benchmark)
 (modules test_repo_synthesis_benchmark)
 (libraries masc_test_deps))

(executable
 (name test_a2a_distributed)
 (modules test_a2a_distributed)
 (libraries masc_test_deps))

(executable
 (name test_concurrent_distributed)
 (modules test_concurrent_distributed)
 (libraries masc_test_deps))

(executable
 (name test_mention_monkey)
 (modules test_mention_monkey)
 (libraries masc_test_deps))

(executable
 (name test_atomic_simple)
 (modules test_atomic_simple)
 (libraries masc_test_deps))

(executable
 (name test_masc_context_injector)
 (modules test_masc_context_injector)
 (libraries masc_test_deps))

(test
 (name test_worker_safety_gates)
 (modules test_worker_safety_gates)
 (libraries masc_test_deps))

(executable
 (name tool_matrix_manifest)
 (modules tool_matrix_manifest test_mcp_tool_matrix_cases)
 (libraries masc_test_deps))

(executable
 (name tool_matrix_case_runner)
 (modules tool_matrix_case_runner test_mcp_tool_matrix_cases)
 (libraries masc_test_deps))

; Context Isolation (multi-keeper)
(test
 (name test_keeper_context_isolation)
 (modules test_keeper_context_isolation)
 (libraries masc_test_deps))

; Transport_bridge.seal guard
(test
 (name test_transport_bridge_seal)
 (modules test_transport_bridge_seal)
 (libraries masc_test_deps))

(executable
 (name keeper_tool_matrix_case_runner)
 (modules keeper_tool_matrix_case_runner test_keeper_tool_matrix_cases
          test_mcp_tool_matrix_cases)
 (libraries masc_test_deps))
